hphp/hack/test/typecheck/suspend_operator_err7.php.exp
File "suspend_operator_err7.php", line 5, characters 16-17:
'suspend' operator expects call to a coroutine as an argument. (Typing[4169])
File "suspend_operator_err7.php", line 3, characters 22-26:
This is a mixed value
