hphp/hack/test/typecheck/suspend_operator_err7.php
<?hh // strict

coroutine function f(mixed $v): int {
  // not ok - argument to suspend is mixed value
  $a = suspend $v;
  return 1;
}
